add all fronted pages except auth
pages are made but not auth one

--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HireVision</title>
+    <title>HireVision - AI-Powered Recruitment Platform</title>
+    <meta
+      name="description"
+      content="Transform your recruitment process with our AI-powered platform featuring Resume Analysis, Job Matching, and Virtual Interviews."
+    />
   </head>
   <body>
     <div id="root"></div>
