added check eligibilty button in hr
add the button to check eligibilty in the candidates section in the hr dashboard

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,13 +4,27 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HireVision - AI-Powered Recruitment Platform</title>
+    <title>HireVision - AI Powered Recruitment Platform</title>
+
+    <!-- Meta tags for SEO -->
     <meta
       name="description"
-      content="Transform your recruitment process with our AI-powered platform featuring Resume Analysis, Job Matching, and Virtual Interviews."
+      content="AI-powered recruitment platform for automated interviews and candidate assessment"
+    />
+    <meta name="keywords" content="recruitment, AI interview, hiring, jobs" />
+
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+
+    <!-- Font (optional) -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
     />
   </head>
-  <body>
+  <body class="bg-slate-900">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
